--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +40,7 @@
                 <li><a class="content-en"  href="#home">home</a></li> 
                 <li><a class="content-ar" href="#home">الصفحة الرئيسية</a></li>
 
-                <li><a class="content-en" href="#daliet-beirut ">What is Dalieh?</a></li>
+                <li><a class="content-en" href="#daliet-beirut ">What is Dalieh</a></li>
                 <li><a class="content-ar" href="#daliet-beirut ">دالية بيروت‬</a></li>
 
                 <li class="content-en"><a href="#campaign">Campaign </a></li>
@@ -152,7 +153,7 @@
             <div class="col-xs-12 col-md-12 col-sm-12">
               <div class=" container TitleSection">
                 <header class="page-head">
-                  <h1 class="content-en">Coalition <small class="content-en">What is the coalition for Dalieh?</small></h1>
+                  <h1 class="content-en">Coalition <small class="content-en">What is the coalition for Dalieh</small></h1>
                   <h1 class="content-ar">الائتلاف‬ <small class="content-ar">ما هو الائتلاف من أجل الدالية؟‬
                   </small></h1>
                 </header>
@@ -178,7 +179,7 @@
                   <div class="col-xs-12 col-md-3 col-sm-12">
                     <ul>
                       <li>
-                        <div class="icon_ser"> <a class="hi-icon hi-icon-todo" href="#done">What has been done?</a> </div>
+                        <div class="icon_ser"> <a class="hi-icon hi-icon-todo" href="#done">What has been done</a> </div>
                         <div class="wrap">
                           <h3 class="content-en">What has been done?</h3>
                           <h3 class="content-ar">ماذا حقق حتى الأن؟</h3> 
@@ -216,7 +217,7 @@
               <div class="row" >
                 <div class="col-xs-12 col-md-12 col-sm-12">
                   <div class="container coalitionSection"> 
-                    <h3 class="content-en">What is the coalition for Dalieh?</h3>
+                    <h3 class="content-en">What is the coalition for Dalieh</h3>
                     <h3 class="content-ar">ما هو الائتلاف من أجل الدالية؟‬</h3>
 
                     <p class="content-en"> The “Civil Campaign to Preserve Daliet el-Raouche” is a coalition of individuals and non-governmental organizations who have come together since 13 March 2014 in order to advocate for the preservation and enhancement of the role of Dalieh as an open-access shared space for all city dwellers and visitors. Partners in the coalition share a strong commitment to the preservation of Beirut’s shared spaces, ecological and cultural diversity as the pillars of the city’s livability.</p>
@@ -243,7 +244,7 @@
               <div class="row" id="done">
                 <div class="col-xs-12 col-md-12 col-sm-12">
                   <div class="container coalitionSection"> 
-                    <h3  class="content-en">What have we done so far?</h3>
+                    <h3  class="content-en">What have we done so far</h3>
                     <p  class="content-en">  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -325,39 +326,39 @@
                         </div>
                       </div>
 
-                      <div class="row content-en" id="others">
+                      <div class="row" id="others">
                         <div class="col-xs-12 col-md-12 col-sm-12">
                           <div class="container coalitionSection"> 
-                            <h3>Position and roles of other bodies</h3>
+                            <h3 class="content-en">Position and roles of other bodies</h3>
 
-                            <ul>
+                            <ul class="content-en">
 
-                              <li>The Municipality of Beirut has full authority to approve or disapprove any building permit for a project in Dalieh, in accordance with Article 13 of the Lebanese Building Law.</li>
+                              <li class="content-en">The Municipality of Beirut has full authority to approve or disapprove any building permit for a project in Dalieh, in accordance with Article 13 of the Lebanese Building Law.</li>
 
-                              <li>The Municipal Council can opt for the acquisition of Dalieh lands through a process of expropriation.</li>
-                              <li>
+                              <li class="content-en">The Municipal Council can opt for the acquisition of Dalieh lands through a process of expropriation.</li>
+                              <li class="content-en">
                                 The Municipality of Beirut is primarily responsible for the organization and management of the city in coordination with other government departments.</li>
 
                               </ul>
 
-                              <ul> <li> <strong>Directorat General d’Urbanisme </strong></li>
+                              <ul class="content-en"> <li class="content-en"> <strong>Directorat General d’Urbanisme </strong></li>
 
-                                <li>The DGU can reject any change or modification in the zoning/master plan of the area at large especially Dalieh. </li>
+                                <li class="content-en">The DGU can reject any change or modification in the zoning/master plan of the area at large especially Dalieh. </li>
 
-                                <li>It can reject any request to grant exceptional building exploitation through law 402. </li>
+                                <li class="content-en">It can reject any request to grant exceptional building exploitation through law 402. </li>
                               </ul>
 
-                              <ul> <li> <strong> Ministry of Environment</strong> </li>
+                              <ul class="content-en"> <li class="content-en"> <strong> Ministry of Environment</strong> </li>
 
-                                <li>Prepare as a first step, a decree proposal (under preparation) to enlist the Entire Dalieh as a “Protected Natural Site” due to its Ecological, Archaeological and Geological importance</li>
+                                <li class="content-en">Prepare as a first step, a decree proposal (under preparation) to enlist the Entire Dalieh as a “Protected Natural Site” due to its Ecological, Archaeological and Geological importance</li>
 
-                                <li>Rally and lobby other Ministries to vote in the adopt its proposal to protect  Dalieh based on its inclusion in several plans and studies commissioned by different Lebanese governments as a site of specific importance especially the “Schema Directeur des territoires Libanaise adopted by a decree number…. </li>
+                                <li class="content-en">Rally and lobby other Ministries to vote in the adopt its proposal to protect  Dalieh based on its inclusion in several plans and studies commissioned by different Lebanese governments as a site of specific importance especially the “Schema Directeur des territoires Libanaise adopted by a decree number…. </li>
 
-                                <li>Reject any EIA study for the project based on the importance of the site. This is possible by a adopting the basic principles of EIA </li>
+                                <li class="content-en">Reject any EIA study for the project based on the importance of the site. This is possible by a adopting the basic principles of EIA </li>
 
-                                <li>Communicate with the Ministry of Public Works requesting (only Tamanni unfortunately) to reject any request to “exploit” Public Maritime Domains in the area which will be key for any project. </li>
+                                <li class="content-en">Communicate with the Ministry of Public Works requesting (only Tamanni unfortunately) to reject any request to “exploit” Public Maritime Domains in the area which will be key for any project. </li>
 
-                                <li> Start working on a law to protect ZONE 10 and the Lebanese Coast “once and for All” with a clear language, based on previous legislation the last of which is the 444 of 2002. </li>
+                                <li class="content-en"> Start working on a law to protect ZONE 10 and the Lebanese Coast “once and for All” with a clear language, based on previous legislation the last of which is the 444 of 2002. </li>
                               </ul>
                             </a>
                           </div>
@@ -469,8 +470,8 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 col-sm-12">
         <div class=" container TitleSection">
-          <header class="page-head">
-            <h1>Revisiting Dalieh<small>A Call for Alternative Visions along Beirut’s Coast</h1>
+          <header class="page-head content-en ">
+            <h1 class="content-en">Revisiting Dalieh<small>A Call for Alternative Visions along Beirut’s Coast</h1>
           </header>
         </div>
         <p class="content-en">This idea-competition has been initiated by the Civil Campaign to Protect Dalieh to open a platform advocating for the maintenance of Dalieh as a space for the public. Teams of multi-disciplinary professionals and/or citizens are invited to forward visions for possible spatial, programmatic, and institutional arrangements in the area of Dalieh. </p>
@@ -478,29 +479,26 @@
         <p class="content-en">This competition is an open call – for designers, planners, ecologists, artists, legal scholars, and others – to articulate a framework of intervention that would respond to the challenge of maintaining Dalieh as an open-access shared space. The competition requests the articulation a set of spatial configurations and programmatic proposals that would respond to the needs of balancing the ecological, social and economic needs in this area.The purpose is to solicit visions that come up with creative, sensitive, and environmentally-sustainable design solutions.</p>
 
         <p class="content-en">More specifically, participants are encouraged to: 
-          <ul>
-            <li>Reaffirm the historical identity of Dalieh through re-defining it “a space for the public” and elaborating on what this means in terms site ownership and roles and responsibility: Who owns? Who controls? Who manages? Who maintains?</li>
-            <li>Develop a spatial configuration and open space pattern that would encourage and support a variety of formal and informal activities while appealing to various age and social groups.</li>
-            <li>Preserve the site’s ecological elements and landscape features by incorporating environmental sustainability principles and solutions in the design and layout of proposed spaces and elements.</li>
-            <li>Maintain the social practices taking place on site, while reducing their adverse environmental impacts; </li>
-            <li>Develop a diverse program, accommodating the wealth of traditional practices, proposing new ones, and capitalizing on the site’s topography, strategic location, and existing views;</li>
-            <li>Enhance the connection of the site to its surrounding city context at the pedestrian and emergency vehicular access levels.</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="content-en">
+            <li class="content-en">Reaffirm the historical identity of Dalieh through re-defining it “a space for the public” and elaborating on what this means in terms site ownership and roles and responsibility: Who owns Who controls Who manages Who maintains</li>
+            <li class="content-en">Develop a spatial configuration and open space pattern that would encourage and support a variety of formal and informal activities while appealing to various age and social groups.</li>
+            <li class="content-en">Preserve the site’s ecological elements and landscape features by incorporating environmental sustainability principles and solutions in the design and layout of proposed spaces and elements.</li>
+            <li class="content-en">Maintain the social practices taking place on site, while reducing their adverse environmental impacts; </li>
+            <li class="content-en">Develop a diverse program, accommodating the wealth of traditional practices, proposing new ones, and capitalizing on the site’s topography, strategic location, and existing views;</li>
+            <li class="content-en">Enhance the connection of the site to its surrounding city context at the pedestrian and emergency vehicular access levels.</li>
+            
           </ul>
         </p>
 
         <p class="content-en">Competition Objectives
-          <ul>
-            <li>To develop future visions for Dalieh in which the place continues to be present and play a role in the lives of all the Lebanese and city dwellers by retaining an open access to its unique geological formation and its rich spatial engagement with the Mediterranean waters. </li>
-            <li>To engage professionals in the cause to reclaim Dalieh through their contribution in order to develop a sense of ownership and stewardship to the public realm.</li>
-            <li>To provide ways of recognizing the ecological wild characteristic of Dalieh and develop social practices that protects its environment in order to trigger public awareness of the significance of the environmental conditions of Dalieh and the city at large.</li>
-            <li>To position the proposals as a platform to open a public debate about shared open-access space in the city by using the particularities of Dalieh to explain how such spaces can be designed, managed and sustained. Selected proposals will provide alternatives to current practices along the coast of Lebanon. </li>
-            <li>To inform city officials and governmental bodies of possibilities for the future of Dalieh and engage them in the debate about shared open-access space in the country at large.</li>
-            <li>To provide exposure to professionals’ work that engages the public realm, hence expanding their presence and role in contributing to the future of the built and natural environment in Lebanon. </li>
-            <li>To broaden our collective understanding of the meaning of place within a highly individualized market-driven urban geography in Lebanon. </li>
+          <ul class="content-en">
+            <li class="content-en">To develop future visions for Dalieh in which the place continues to be present and play a role in the lives of all the Lebanese and city dwellers by retaining an open access to its unique geological formation and its rich spatial engagement with the Mediterranean waters. </li>
+            <li class="content-en">To engage professionals in the cause to reclaim Dalieh through their contribution in order to develop a sense of ownership and stewardship to the public realm.</li>
+            <li class="content-en">To provide ways of recognizing the ecological wild characteristic of Dalieh and develop social practices that protects its environment in order to trigger public awareness of the significance of the environmental conditions of Dalieh and the city at large.</li>
+            <li class="content-en">To position the proposals as a platform to open a public debate about shared open-access space in the city by using the particularities of Dalieh to explain how such spaces can be designed, managed and sustained. Selected proposals will provide alternatives to current practices along the coast of Lebanon. </li>
+            <li class="content-en">To inform city officials and governmental bodies of possibilities for the future of Dalieh and engage them in the debate about shared open-access space in the country at large.</li>
+            <li class="content-en">To provide exposure to professionals’ work that engages the public realm, hence expanding their presence and role in contributing to the future of the built and natural environment in Lebanon. </li>
+            <li class="content-en">To broaden our collective understanding of the meaning of place within a highly individualized market-driven urban geography in Lebanon. </li>
           </ul>
 
         </p>
@@ -564,7 +562,7 @@
                             </div>
                             <div class="google">
                               <h3>Find the Address</h3>
-                              <div id="map"></div>
+                            
                             </div>
                           </div>
                         </div>
@@ -603,8 +601,9 @@
                 <script src="js/nicescroll.min.js"></script><!-- jquery nice scroll--> 
                 <script src="js/pace.min.js" ></script> <!--page load progress bar--> 
                 <script src="js/jquery.validate.min.js"></script><!--contact page--> 
-                <script src="http://maps.google.com/maps/api/js?sensor=true"></script><!--google map contact page--> 
-                <script src="js/gmaps.min.js"></script><!--google map contact page--> 
+               <!-- <script src="http://maps.google.com/maps/api/jssensor=true"></script>
+               google map contact page
+                <script src="js/gmaps.min.js"></script>google map contact page--> 
                 <script src="js/isotope.min.js"></script><!--Portfolio Filter--> 
                 <script src="js/flexslider.min.js"></script><!-- FlexSlider --> 
                 <script src="js/custom.js"></script><!-- Custom JavaScript  -->
