competition forgot to close small tag

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                     <div class="col-xs-12 col-md-12 col-sm-12">
                       <div class=" container TitleSection">
                         <header class="page-head content-en ">
-                          <h1 class="content-en">Revisiting Dalieh<small>A Call for Alternative Visions along Beirut’s Coast</h1>
+                          <h1 class="content-en">Revisiting Dalieh<small>A Call for Alternative Visions along Beirut’s Coast</small></h1>
                         </header>
                       </div>
                       <p class="content-en">This idea-competition has been initiated by the Civil Campaign to Protect Dalieh to open a platform advocating for the maintenance of Dalieh as a space for the public. Teams of multi-disciplinary professionals and/or citizens are invited to forward visions for possible spatial, programmatic, and institutional arrangements in the area of Dalieh. </p>
