adding competition timeline

--- a/index.html
+++ b/index.html
@@ -513,107 +513,184 @@
                           <li class="content-en">To provide exposure to professionals’ work that engages the public realm, hence expanding their presence and role in contributing to the future of the built and natural environment in Lebanon. </li>
                           <li class="content-en">To broaden our collective understanding of the meaning of place within a highly individualized market-driven urban geography in Lebanon. </li>
                         </ul>
-
                       </p>
+
+                      <p class="content-en">
+                        <h2 class="content-en"> Conditions & Guidelines</h2>
+
+                        <p class="content-en" >The competition guidelines are drawn from the extensive research undertaken by the CCPD of the landscape, social and legal layers of Dalieh, in addition to award winning international projects that share the sensitive context of Dalieh . The guidelines herein proposed are not mandatory, but seen as necessary to imagine what an open access shared space could resemble, what spatial form it can take, and what program / institutional framework can sustain it economically, politically and environmentally. </p>
+
+                        <p class="content-en" > The changing urban context not only heightens Dalieh’s value as a natural site but in addition amplifies the role of the open site landscape as a publicly accessible open space. A vision for Dalieh should necessarily reconcile these two apparently contradictory activities and approach the complexity of the problematic through a multifaceted holistic approach.The competition challenges participants to envision a landscape that recognizes Dalieh’s cultural memory and social practices as the last remaining natural landscape and publicly accessible open space in the city. </p>
+
+                        <p class="content-en" > In the maps included in the competition brief, we represent the area in accordance with environmental, social and legal issues. The maps create images of all that needs to be taken into consideration, and could act as a visual guideline for intervention. </p>
+
+                        <p class="content-en" > A summary of broad guidelines are outlined in the competition brief </p>
+                      </p>
+
+
+                      <p class="content-en">
+
+                        <h2 class="content-en">Competition timeline</h2>
+
+                        <p class="content-en">
+                          The competition schedule and the respective project milestone due dates are listed in the table below.  During this period, Participants will have the opportunity to attend a site visit and to request further clarifications.  It is anticipated that the selection of the winning schemes, public announcement, and exhibition of entries will take place shortly after the submission deadline. </p>
+
+
+                          <table class="table  table-striped table-hover">
+                            <tr> 
+                              <td> Launching of Competition / Start of Registration </td>
+                              <td> Wednesday, March 11, 2015</td>
+                            </tr>
+                            <tr> 
+                              <td> End of Registration: Wednesday</td>
+                              <td> April 8, 2015 </td>
+                            </tr>
+                            <tr> 
+                              <td> Guided Site Visit (Optional) </td>
+                              <td>Saturday, April 4, 2015 and Saturday, April 11, 2015</td>
+                            </tr>
+                            <tr> 
+                              <td>End of Question Period: </td>
+                              <td>Tuesday, April 14, 2015</td>
+                            </tr>
+                            <tr> 
+                              <td> Reply to Questions </td>
+                              <td>Saturday, April 25, 2015</td>
+                            </tr>
+
+                            <tr> 
+                              <td>Deadline for Submission of Proposals</td>
+                              <td>Wednesday, May 27, 2015</td>
+                            </tr>
+
+                            <tr> 
+                              <td>Presentation by Participants</td>
+                              <td>Friday, June 5, 2015 </td>
+                            </tr>
+
+                            <tr> 
+                              <td>Jury Deliberations</td>
+                              <td>Saturday, June 6, 2015</td>
+                            </tr>
+
+                            <tr> 
+                              <td> Announcement of Finalists / Press Release </td>
+                              <td>Sunday, June 7, 2015</td>
+                            </tr>
+
+                            <tr>
+                              <td>Award ‘Ceremony’ and Exhibition Opening</td>
+                              <td>Saturday, June13, 2015 </td>
+                            </tr>
+
+                            <tr>
+                              <td>Exhibition Period</td>
+                              <td>Saturday June 13, 2015 until Tuesday, June 23, 2015</td>
+                            </tr>
+                          </table>
+
+                        </p>
+
+
+                      </div>
                     </div>
                   </div>
+
                 </div>
-
-              </div>
-              <!-- /competition --> 
+                <!-- /competition --> 
 
 
 
 
-              <!--Contact -->
-              <div id="contact" class="contact">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-xs-12 col-md-12 col-sm-12">
-                      <div class=" container TitleSection">
-                        <header class="page-head">
-                          <h1>Contact Us<small>Lorem ipsum dolor</small><small>Lorem ipsum dolor sit amet</small></h1>
-                        </header>
-                      </div>
-                      <div class="row">
-                        <div class="col-xs-12 col-md-7 col-sm-12">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <strong> Email General Inquiries: something@email.com</strong></p>
-                            <div class="contact_wrap" >
-                              <h3>Contact Form</h3>
-                              <form method="post" action="submit_now.php" id="passion_form">
-                                <div class="form-group">
-                                  <input type="text" size="50" name="contactname" id="InputName" value="" class="form-control required" placeholder="Your Name*"/>
-                                </div>
-                                <div class="form-group">
-                                  <input type="text" size="50" name="email" id="email" value="" class="form-control required email" placeholder="Enter Email*"/>
-                                </div>
-                                <div class="form-group">
-                                  <input type="text" size="50" name="website" id="website" value="" class="form-control" placeholder="Website"/>
-                                </div>
-                                <div class="form-group">
-                                  <textarea class="form-control required" rows="6" id="message"  placeholder="Your Message*"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-default">Submit</button>
-                              </form>
+                <!--Contact -->
+                <div id="contact" class="contact">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-12 col-sm-12">
+                        <div class=" container TitleSection">
+                          <header class="page-head">
+                            <h1>Contact Us<small>Lorem ipsum dolor</small><small>Lorem ipsum dolor sit amet</small></h1>
+                          </header>
+                        </div>
+                        <div class="row">
+                          <div class="col-xs-12 col-md-7 col-sm-12">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <strong> Email General Inquiries: something@email.com</strong></p>
+                              <div class="contact_wrap" >
+                                <h3>Contact Form</h3>
+                                <form method="post" action="submit_now.php" id="passion_form">
+                                  <div class="form-group">
+                                    <input type="text" size="50" name="contactname" id="InputName" value="" class="form-control required" placeholder="Your Name*"/>
+                                  </div>
+                                  <div class="form-group">
+                                    <input type="text" size="50" name="email" id="email" value="" class="form-control required email" placeholder="Enter Email*"/>
+                                  </div>
+                                  <div class="form-group">
+                                    <input type="text" size="50" name="website" id="website" value="" class="form-control" placeholder="Website"/>
+                                  </div>
+                                  <div class="form-group">
+                                    <textarea class="form-control required" rows="6" id="message"  placeholder="Your Message*"></textarea>
+                                  </div>
+                                  <button type="submit" class="btn btn-default">Submit</button>
+                                </form>
+                              </div>
                             </div>
-                          </div>
-                          <div class="col-xs-12 col-md-5 col-sm-12">
-                            <div class="jumbotron">
-                              <h3>Address Info</h3>
+                            <div class="col-xs-12 col-md-5 col-sm-12">
+                              <div class="jumbotron">
+                                <h3>Address Info</h3>
 
-                              <address>
-                                <strong>Email</strong> <a href="mailto:#">first.last@example.com</a><br>
-                                <strong>Facebook</strong> <a href="#">www.facebook.com/daliet</a><br>
-                                <strong>Twitter</strong> <a href="#">www.twitter.com/daliet</a>
-                              </address>
-                            </div>
-                            <div class="google">
-                              <h3>Find the Address</h3>
+                                <address>
+                                  <strong>Email</strong> <a href="mailto:#">first.last@example.com</a><br>
+                                  <strong>Facebook</strong> <a href="#">www.facebook.com/daliet</a><br>
+                                  <strong>Twitter</strong> <a href="#">www.twitter.com/daliet</a>
+                                </address>
+                              </div>
+                              <div class="google">
+                                <h3>Find the Address</h3>
 
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <!-- /contact --> 
+                  <!-- /contact --> 
 
-                <!-- Footer -->
-                <footer>
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-xs-12 col-md-9 col-sm-12">
-                        <p>Copyright &copy; All rights reserved.</p>
-                      </div>
-                      <div class="col-xs-12 col-md-3 col-sm-12">
-                        <ul class=" footer_social clearfix">
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                          <li class="go_top"><a href="#top"><i class="fa fa-chevron-circle-up"></i></a></li>
-                        </ul>
+                  <!-- Footer -->
+                  <footer>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-xs-12 col-md-9 col-sm-12">
+                          <p>Copyright &copy; All rights reserved.</p>
+                        </div>
+                        <div class="col-xs-12 col-md-3 col-sm-12">
+                          <ul class=" footer_social clearfix">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                            <li class="go_top"><a href="#top"><i class="fa fa-chevron-circle-up"></i></a></li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                </footer>
-                <!-- /Footer --> 
+                  </footer>
+                  <!-- /Footer --> 
 
-                <!-- JavaScript --> 
-                <script src="js/jquery.min.js"></script> 
-                <script src="js/bootstrap.min.js"></script> 
-                <script src="js/modernizr.custom.js"></script> <!-- Services icons--> 
-                <script src="js/nicescroll.min.js"></script><!-- jquery nice scroll--> 
-                <script src="js/pace.min.js" ></script> <!--page load progress bar--> 
-                <script src="js/jquery.validate.min.js"></script><!--contact page--> 
+                  <!-- JavaScript --> 
+                  <script src="js/jquery.min.js"></script> 
+                  <script src="js/bootstrap.min.js"></script> 
+                  <script src="js/modernizr.custom.js"></script> <!-- Services icons--> 
+                  <script src="js/nicescroll.min.js"></script><!-- jquery nice scroll--> 
+                  <script src="js/pace.min.js" ></script> <!--page load progress bar--> 
+                  <script src="js/jquery.validate.min.js"></script><!--contact page--> 
                <!-- <script src="http://maps.google.com/maps/api/jssensor=true"></script>
                google map contact page
                <script src="js/gmaps.min.js"></script>google map contact page--> 
