--- a/index.html
+++ b/index.html
@@ -590,25 +590,25 @@
                 <div class="col-xs-12 col-md-12 col-sm-12">
                   <div class=" container TitleSection">
                     <header class="page-head">
-                      <h1>Contact Us<small>Lorem ipsum dolor</small><small>Lorem ipsum dolor sit amet</small></h1>
+                      <h1 class="content-en">Contact Us<small>Lorem ipsum dolor</small><small>Lorem ipsum dolor sit amet</small></h1>
                     </header>
                   </div>
                   <div class="row">
                     <div class="col-xs-12 col-md-7 col-sm-12">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                      <p class="content-en">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <strong> Email General Inquiries: something@email.com</strong></p>
+                        <p class="content-en"> Email General Inquiries: something@email.com</p></p>
                        
                       </div>
                       <div class="col-xs-12 col-md-5 col-sm-12">
                         <div class="jumbotron">
-                          <h3>Address Info</h3>
+                          <h3 class="content-en">Address Info</h3>
 
-                          <address>
+                          <address class="content-en">
                             <strong>Email</strong> <a href="mailto:#">first.last@example.com</a><br>
                             <strong>Facebook</strong> <a href="#">www.facebook.com/daliet</a><br>
                             <strong>Twitter</strong> <a href="#">www.twitter.com/daliet</a>
@@ -628,10 +628,10 @@
               <div class="container">
                 <div class="row">
                   <div class="col-xs-12 col-md-9 col-sm-12">
-                    <p>Copyright &copy; All rights reserved.</p>
+                    <p class="content-en" >Copyright &copy; All rights reserved.</p>
                   </div>
                   <div class="col-xs-12 col-md-3 col-sm-12">
-                    <ul class=" footer_social clearfix">
+                    <ul class="content-en footer_social clearfix">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
