--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-sm-12">
+                <div class="flex-caption-mobile">As a coalition of individuals invested in safeguarding Beirut’s livability, we have come together to advocate for the protection of the city's seafront facade as a shared-space, open access zone. We are propelled by a shared love of the city in its social and ecological diversity. We take issue with those calling Beirut 'an ugly city' and mourning its once beautiful face. Our message is directed to all city dwellers; we invite everyone to join us in struggling for her/his right to the city, a city where private capital cannot trump the desires of the urban majorities.</div>
                 <div class="container TitleSection">
                   <header class="page-head">
                     <h1 class="content-en">Daliet Beirut<small>social, environmental, legal aspects</small></h1>
@@ -498,7 +499,8 @@
           </ul>
         </div>
 
-        <div class="content-en">Competition Objectives
+        <div class="content-en">
+          <div class="content-en">Competition Objectives</div>
           <ul class="content-en">
             <li class="content-en">To develop future visions for Dalieh in which the place continues to be present and play a role in the lives of all the Lebanese and city dwellers by retaining an open access to its unique geological formation and its rich spatial engagement with the Mediterranean waters. </li>
             <li class="content-en">To engage professionals in the cause to reclaim Dalieh through their contribution in order to develop a sense of ownership and stewardship to the public realm.</li>
