--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  
+  <div id="competition"  class="container-fluid">
     <div class="row">
      <div id="bg-2" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
        <div class="col-sm-6 col-sm-offset-3 text-center"></div>
@@ -474,7 +475,7 @@
  </div>
 </div>
  <!-- Services -->
- <div id="competition" class="competition">
+ <div class="competition">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12 col-sm-12">
