--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       </div>
     </div>
   </div>
-  
+
   <div id="competition"  class="container-fluid">
     <div class="row">
      <div id="bg-2" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -586,6 +586,14 @@
                 <td>Saturday June 13, 2015 until Tuesday, June 23, 2015</td>
               </tr>
             </table>
+
+          </div>
+
+          <div class="content-en">
+            <!-- Change the width and height values to suit you best -->
+<div class="typeform-widget" data-url="https://opengov.typeform.com/to/ABrgJQ" data-text="Registration Form" style="width:100%;height:500px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_ABrgJQ&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
 
           </div>
          
