--- a/index-draft.html
+++ b/index-draft.html
@@ -294,6 +294,9 @@
               <p class="content-en">The campaign launched in November 2013 a petition that was published online on social media, and over 1,000 people signed it. This evolved into a campaign under the slogan "Lift your construction site off our Raouche". Throughout this past year, we have worked on sending official letters to relevant ministries, organizing activities in Dalieh, preparing legal and environmental research and producing slogans, visuals and videos to promote this space. We’ve also archived old photographs of the site, published press releases and filed lawsuits, among other interventions. 
               </p>
 
+              <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                
+              </div>
               <p id="done">
                 <h3 class="content-en"> What has been done so far? </h3>
                 <ul class="cbp_tmtimeline content-en">
@@ -567,7 +570,11 @@
 <div class="content-en">
 
   <h2 class="content-en">Schedule and milestones</h2>
+<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+  
+</div>
 
+<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
   <table class="table content-en  table-striped table-hover">
     <tr > 
       <td> Launching of Competition/Start of Registration </td>
@@ -620,6 +627,8 @@
 
     </tr>
   </table>
+</div>
+  
 
 </div>
 
