--- a/index-draft.html
+++ b/index-draft.html
@@ -283,7 +283,7 @@
           <div class="col-xs-12 col-md-12 col-sm-12">
             <div class="container coalitionSection"> 
 
-
+               <h3 class="content-en">Campaign</h3>
               <p id="who-are-we" class="content-en"> The “Civil Campaign to Protect the Dalieh of Raouche” (CCPDR) emerged in March 2013 to advocate for the preservation and enhancement of the role of Dalieh as an open-access shared space for all city dwellers and visitors. CCPDR is a coalition of individuals and non-governmental organizations who share a strong commitment to the preservation of Beirut’s shared spaces, ecological and cultural diversity as the pillars of the city’s livability. </p>
 
               <p class="content-en">The coalition encompasses civilians, parents and children, young and old, who are committed to the protection of Beirut’s shared spaces, particularly its seafront façade as the asset to maintain the livability of the city. It includes individuals, environmental, cultural and civil groups working through legal and civil means to protect the Dalieh as a shared, free and unrestricted area for the people.  </p>
