--- a/index-draft.html
+++ b/index-draft.html
@@ -346,6 +346,10 @@
 
                 </p>
 
+              <p class="content-en">
+                <h3> Lawsuit </h3>
+                  <img class="img-responsive" src="images/lawsuit.jpg" >
+              </p>
 
                 <p class="content-en">
 
