--- a/index-draft.html
+++ b/index-draft.html
@@ -549,7 +549,7 @@
                 The Competition is organized under the patronage of the Ministry of Environment. Other key supporters are: The Asfari Institute for Civil Society and Citizenship and the Nature Conservation Center at the American University of Beirut (AUB). 
               </p>
 
-              <h1 class="content-en">Information packets</h1>
+              <h2 class="content-en">Information packets</h2>
 
               <p class="content-en">You can download here the competition brief containing all pertinent information on the competition as well as various appendices.   </p>
 
@@ -572,7 +572,7 @@
 
                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <h3 class="content-en"> Jad Chaaban </h3>
-                <p class="content-en"> <img class="jury-img" src="images/JadChaaban.jpg">Jad Chaaban is a Lebanese Economist and Social Activist. He is an Associate Professor of Economics at the American University of Beirut (AUB). His research and advocacy work focuses mostly on using evidence-based economics analysis to enhance the wellbeing of the most vulnerable groups in society. In 2014-2015 he served as the Lead Author of UNDP’s Arab Human Development Report 2015, a flagship publication authored by leading scholars, policymakers and opinion leaders working on the Arab countries. Chaaban holds a PhD in Economics from the Toulouse School of Economics (2004), a Master’s in Agricultural, Environmental and Natural Resources Economics (2001) from the same university, an MBA from the European School of Management (2000), and a BA in Economics from AUB (1999). He regularly writes about research and public policy issues on his personal website, and in local and international media.
+                <p> <img class="jury-img" src="images/JadChaaban.jpg">Jad Chaaban is a Lebanese Economist and Social Activist. He is an Associate Professor of Economics at the American University of Beirut (AUB). His research and advocacy work focuses mostly on using evidence-based economics analysis to enhance the wellbeing of the most vulnerable groups in society. In 2014-2015 he served as the Lead Author of UNDP’s Arab Human Development Report 2015, a flagship publication authored by leading scholars, policymakers and opinion leaders working on the Arab countries. Chaaban holds a PhD in Economics from the Toulouse School of Economics (2004), a Master’s in Agricultural, Environmental and Natural Resources Economics (2001) from the same university, an MBA from the European School of Management (2000), and a BA in Economics from AUB (1999). He regularly writes about research and public policy issues on his personal website, and in local and international media.
                 </p>
 
               </div>
@@ -580,8 +580,8 @@
 
 
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <h3>Hans Kienle </h3>
-                <p> <img class="jury-img" src="images/HansKienle.jpg"> Hans Kienleholds a degree in architecture from the Technical University of Stuttgart. He worked in different architecture firms and is assistant professor at the University of Stuttgart. He is a member of the Chamber of Architects, and is a partner and senior architect at Luz Kienle Wirth landscape architects.  Since 1985, he is Managing Partner of Kienleplan. He has experience in environmental design, landscape architecture, architecture and urbanism. He has successfully participated in numerous national and international competitions.  He has projects in Saudi Arabia, Iraq, Yemen, and Jordan. He is lecturer at the University of Stuttgart since 1987, and professor at universities Biberach and Stuttgart since 2003. He has previously been a guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou.
+                <h3 class="content-en">Hans Kienle </h3>
+                <p class="content-en" > <img class="jury-img" src="images/HansKienle.jpg"> Hans Kienleholds a degree in architecture from the Technical University of Stuttgart. He worked in different architecture firms and is assistant professor at the University of Stuttgart. He is a member of the Chamber of Architects, and is a partner and senior architect at Luz Kienle Wirth landscape architects.  Since 1985, he is Managing Partner of Kienleplan. He has experience in environmental design, landscape architecture, architecture and urbanism. He has successfully participated in numerous national and international competitions.  He has projects in Saudi Arabia, Iraq, Yemen, and Jordan. He is lecturer at the University of Stuttgart since 1987, and professor at universities Biberach and Stuttgart since 2003. He has previously been a guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou.
 
                 </p>
               </div>
@@ -592,8 +592,8 @@
             </div>
             <div class="row">
              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3>Marwan Ghandour </h3>
-              <p>Marwan Ghandour is a Professor of Architecture and Associate Dean for Academic Programs at the College of Design, Iowa State University. He teaches architectural and urban design studio and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and practice focus on two regions, the Middle East and the American Midwest where he conducts theoretical and historical research and develops urban regeneration proposals. His research interests includemultidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandourholds anMSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
+              <h3 class="content-en">Marwan Ghandour </h3>
+              <p class="content-en">Marwan Ghandour is a Professor of Architecture and Associate Dean for Academic Programs at the College of Design, Iowa State University. He teaches architectural and urban design studio and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and practice focus on two regions, the Middle East and the American Midwest where he conducts theoretical and historical research and develops urban regeneration proposals. His research interests includemultidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandourholds anMSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
               </p>
             </div>
 
