--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
 
 
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <h3>Hans Kienle </h3>
-                <p> <img class="jury-img" src="images/HansKienle.jpg"> Hans Kienleholds a degree in architecture from the Technical University of Stuttgart. He worked in different architecture firms and is assistant professor at the University of Stuttgart. He is a member of the Chamber of Architects, and is a partner and senior architect at Luz Kienle Wirth landscape architects.  Since 1985, he is Managing Partner of Kienleplan. He has experience in environmental design, landscape architecture, architecture and urbanism. He has successfully participated in numerous national and international competitions.  He has projects in Saudi Arabia, Iraq, Yemen, and Jordan. He is lecturer at the University of Stuttgart since 1987, and professor at universities Biberach and Stuttgart since 2003. He has previously been a guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou.
+                <h3  class="content-en">Hans Kienle </h3>
+                <p  class="content-en"> <img class="jury-img" src="images/HansKienle.jpg"> Hans Kienleholds a degree in architecture from the Technical University of Stuttgart. He worked in different architecture firms and is assistant professor at the University of Stuttgart. He is a member of the Chamber of Architects, and is a partner and senior architect at Luz Kienle Wirth landscape architects.  Since 1985, he is Managing Partner of Kienleplan. He has experience in environmental design, landscape architecture, architecture and urbanism. He has successfully participated in numerous national and international competitions.  He has projects in Saudi Arabia, Iraq, Yemen, and Jordan. He is lecturer at the University of Stuttgart since 1987, and professor at universities Biberach and Stuttgart since 2003. He has previously been a guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou.
 
                 </p>
               </div>
@@ -592,8 +592,8 @@
             </div>
             <div class="row">
              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3>Marwan Ghandour </h3>
-              <p>Marwan Ghandour is a Professor of Architecture and Associate Dean for Academic Programs at the College of Design, Iowa State University. He teaches architectural and urban design studio and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and practice focus on two regions, the Middle East and the American Midwest where he conducts theoretical and historical research and develops urban regeneration proposals. His research interests includemultidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandourholds anMSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
+              <h3  class="content-en">Marwan Ghandour </h3>
+              <p  class="content-en">Marwan Ghandour is a Professor of Architecture and Associate Dean for Academic Programs at the College of Design, Iowa State University. He teaches architectural and urban design studio and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and practice focus on two regions, the Middle East and the American Midwest where he conducts theoretical and historical research and develops urban regeneration proposals. His research interests includemultidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandourholds anMSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
               </p>
             </div>
 
@@ -602,8 +602,8 @@
 
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3> Habib Debs </h3>
-              <p>Habib Debs is an architect, engineer and urban planner. He conducted for public and international institutions, in Lebanon, France and other countries in the Middle East and North Africa, several strategic planning processes including cities strategies, regional and local sustainable development plans, as well as urban design projects including heritage districts conservation, urban revitalization, post-war reconstruction, mix use city centers, soft mobility and public space design. His professional practice in Lebanon embraces volunteering to collaborate with civil society and local citizen groups to protect natural sites and preserve urban heritage in postwar recovery and reconstruction, notably in Beirut, Salima and Bint-Jbeil. He has taught architecture and urban planning at the American University of Beirut and Académie Libanaise des Beaux-Arts (ALBA).
+              <h3  class="content-en"> Habib Debs </h3>
+              <p  class="content-en">Habib Debs is an architect, engineer and urban planner. He conducted for public and international institutions, in Lebanon, France and other countries in the Middle East and North Africa, several strategic planning processes including cities strategies, regional and local sustainable development plans, as well as urban design projects including heritage districts conservation, urban revitalization, post-war reconstruction, mix use city centers, soft mobility and public space design. His professional practice in Lebanon embraces volunteering to collaborate with civil society and local citizen groups to protect natural sites and preserve urban heritage in postwar recovery and reconstruction, notably in Beirut, Salima and Bint-Jbeil. He has taught architecture and urban planning at the American University of Beirut and Académie Libanaise des Beaux-Arts (ALBA).
               </p>
             </div>
 
@@ -616,15 +616,15 @@
 
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3>Kathryn Moore</h3>
-              <p><img class="jury-img" src="images/KathrynMoore.jpg">Kathryn Moore is the current president of the International Federation of Landscape Architecture (IFLA) and chair of the IFLA working group to advise UNESCO and United Nations Agencies on the feasibility of an international landscape convention. Moore has contributed to the Council of Europe’s evaluation on the implementation of the European Landscape Convention. She was previously president of the Landscape Institute and 2008 and Thomas Jefferson Visiting Chair at the University of Virginia, she has published extensively on design quality, theory, education and practice. 
+              <h3  class="content-en">Kathryn Moore</h3>
+              <p  class="content-en"><img class="jury-img" src="images/KathrynMoore.jpg">Kathryn Moore is the current president of the International Federation of Landscape Architecture (IFLA) and chair of the IFLA working group to advise UNESCO and United Nations Agencies on the feasibility of an international landscape convention. Moore has contributed to the Council of Europe’s evaluation on the implementation of the European Landscape Convention. She was previously president of the Landscape Institute and 2008 and Thomas Jefferson Visiting Chair at the University of Virginia, she has published extensively on design quality, theory, education and practice. 
 
               </p>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3>Jad Tabet</h3>
-              <p><img class="jury-img" src="images/JadTabet.jpg">  Jad Tabet holds a degree in Architecture from the American University of Beirut.  His professional practice focuses on planning, heritage and landscape protection, requalification sensitive sites, and intervention in heritage urban fabrics. Tabet has served as an expert to the UNESCO World Heritage since 2006 and was member of the World Heritage Committee of UNESCO.  He is director of Patrimoine sans Frontières since 1992. He holds many awards, among them the National Gold Prism Award, Award of the French Ministry of Culture for the rehabilitation of the Housing, and Urban Planning Award from Le Moniteur for the development of public spaces of ZAC Reuilly in Paris 12th (with Roland Schweitzer). Tabet has taught at the American University of Beirut and the Lebanese University.  He has published extensively on Beirut and served as director of the Beirut Workshop School of Architecture Paris-Belleville.
+              <h3  class="content-en">Jad Tabet</h3>
+              <p  class="content-en"><img class="jury-img" src="images/JadTabet.jpg">  Jad Tabet holds a degree in Architecture from the American University of Beirut.  His professional practice focuses on planning, heritage and landscape protection, requalification sensitive sites, and intervention in heritage urban fabrics. Tabet has served as an expert to the UNESCO World Heritage since 2006 and was member of the World Heritage Committee of UNESCO.  He is director of Patrimoine sans Frontières since 1992. He holds many awards, among them the National Gold Prism Award, Award of the French Ministry of Culture for the rehabilitation of the Housing, and Urban Planning Award from Le Moniteur for the development of public spaces of ZAC Reuilly in Paris 12th (with Roland Schweitzer). Tabet has taught at the American University of Beirut and the Lebanese University.  He has published extensively on Beirut and served as director of the Beirut Workshop School of Architecture Paris-Belleville.
 
               </p>
             </div>
@@ -635,8 +635,8 @@
 
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3>Jala Makhzoumi</h3>
-              <p>Jala Makhzoumi studied architecture in Baghdad, completed her master in Environmental Design at Yale University, and PhD in landscape architecture at Sheffield University. She advocates an expansive, developmental landscape approach to mediate community needs with ecosystem health, biodiversity protection and landscape heritage conservation. Her professional and academic expertise includes postwar recovery, energy efficient site planning and sustainable urban greening. Makhzoumi is affiliate faculty at American University of Beirut, and founding member and senior fellow in the Cambridge Center for Landscape and People. In 2013 Makhzoumi co-established UNIT44, a Lebanon based practice in architecture, landscape architecture, ecological planning and urban design.
+              <h3  class="content-en">Jala Makhzoumi</h3>
+              <p  class="content-en">Jala Makhzoumi studied architecture in Baghdad, completed her master in Environmental Design at Yale University, and PhD in landscape architecture at Sheffield University. She advocates an expansive, developmental landscape approach to mediate community needs with ecosystem health, biodiversity protection and landscape heritage conservation. Her professional and academic expertise includes postwar recovery, energy efficient site planning and sustainable urban greening. Makhzoumi is affiliate faculty at American University of Beirut, and founding member and senior fellow in the Cambridge Center for Landscape and People. In 2013 Makhzoumi co-established UNIT44, a Lebanon based practice in architecture, landscape architecture, ecological planning and urban design.
 
               </p>
             </div>
