--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 The Competition is organized under the patronage of the Ministry of Environment. Other key supporters are: The Asfari Institute for Civil Society and Citizenship and the Nature Conservation Center at the American University of Beirut (AUB). 
               </p>
 
-              <h1 class="content-en">Information packets</h1>
+              <h3 class="content-en">Information packets</h3>
 
               <p class="content-en">You can download here the competition brief containing all pertinent information on the competition as well as various appendices.   </p>
 
@@ -652,12 +652,12 @@
       <div class="content-en">
 
 
-        <h1>Award</h1>
+        <h3 class="content-en">Award</h3>
 
         <p class="content-en" >Jury members would select a number of entries that will be part of an open touring exhibition, starting with the Beirut Design Week, and will be posted on the website.  In recognition of their achievements, these shortlisted entries will be included in a publication for advocacy and will be publicly announced in a press release and during the exhibition opening event.   </p>
 
 
-        <h1>Registration</h1>
+        <h3 class="content-en">Registration</h3>
 
         <p class="content-en" >The registration form will be available starting Sunday March 29th. Please re-visit the site starting then to register.</p>
 
