--- a/index.html
+++ b/index.html
@@ -556,14 +556,35 @@
 
               <div class="content-en"> 
                 <ul class="content-en">
-                 <li class="content-en">Competition Brief</li>
+                 <a href="assets/CompetitionBrief.pdf">
+                  <li class="content-en">Competition Brief</li>
+                </a>
+                <a href="assets/APPENDIX 1 - Landscape Characteristics.rar">
                  <li class="content-en">Appendix 1 - Landscape Characteristics (4 MB)</li>
+                </a> 
+                <a href="assets/APPENDIX 2 - Existing Legal Framework.rar">
                  <li class="content-en">Appendix 2 - Existing Legal Framework (1.1 MB)</li>
+                </a>
+                <a href="assets/APPENDIX 3 - About Beirut and Public Space.rar"> 
                  <li class="content-en">Appendix 3 - About Beirut and Public Space</li>
-                 <li class="content-en">Appendix 4 - Photographic Survey </li>
-                 <li class="content-en">Appendix 5 - Existing Site Maps and Aerials</li>
-                 <li class="content-en">Appendix 7 - Relevant Web Link</li>
+                </a>
 
+                <a href="assets/APPENDIX 4 - Photographic Survey.rar"> 
+                 <li class="content-en">Appendix 4 - Photographic Survey </li>
+                </a>
+
+                <a href="assets/APPENDIX 5 - Existing Site Maps and Aerials.rar"> 
+                 <li class="content-en">Appendix 5 - Existing Site Maps and Aerials</li>
+                </a>
+
+                <a href="assets/APPENDIX 6 - Maps.rar"> 
+                 <li class="content-en">Appendix 6 - Maps (42.8 mb)</li>
+                </a>
+
+                
+                <a href="assets/APPENDIX 7 - Relevant Web Links.rar"> 
+                 <li class="content-en">Appendix 7 - Relevant Web Link</li>
+               </a>
                </ul>
              </div>
 
