--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 
 
 
-                <li class="content-en" > <a href="#contact">Contact</a></li>
-                <li class="content-ar" > <a href="#contact">إتصل بنا</a></li>
+               
 
                 <li id="language-switcher" current-language="EN"><a href="#">العربية</a></li>
               </ul>
@@ -756,7 +755,7 @@
 
 <!--Contact -->
 <div id="contact" class="contact content-en">
-  <div class="container">
+<!--   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12 col-sm-12">
         <div class=" container TitleSection">
@@ -785,7 +784,7 @@
       </div>
     </div>
   </div>
-</div>
+ --></div>
 <!-- /contact --> 
 
 <!-- Footer -->
@@ -793,7 +792,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-9 col-sm-12">
-        <p class="content-en" >Copyright &copy; All rights reserved.</p>
+        <p class="content-en" > <a href="mailto:info@dalieh.org">Email General Inquiries: info@dalieh.org</a></p>
       </div>
       <div class="col-xs-12 col-md-3 col-sm-12">
         <ul class="content-en footer_social clearfix">
