--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
 
 
 <!--Contact -->
-<div id="contact" class="contact content-en">
+<div id="contact" class="contact">
 <!--   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12 col-sm-12">
@@ -792,7 +792,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-9 col-sm-12">
-        <p class="content-en" > <a href="mailto:info@dalieh.org">Email General Inquiries: info@dalieh.org</a></p>
+        <p> <a href="mailto:info@dalieh.org">Email General Inquiries: info@dalieh.org</a></p>
       </div>
       <div class="col-xs-12 col-md-3 col-sm-12">
         <ul class="content-en footer_social clearfix">
